kubernetes/worker/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: vote-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker 
    spec: 
      containers:
      - name: worker
        image: h0x3ein/rworker:2e16ed1
        resources:
          requests:
            cpu: "200m"        
            memory: "128Mi"   
          limits:
            cpu: "400m"       
            memory: "256Mi"
