kubernetes/worker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker
  namespace: vote-app
spec:
  selector:
    app: worker
  ports:
  - port: 8080
    targetPort: 8080
