kubernetes/worker/worker-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: worker-egress
  namespace: vote-app
spec:
  podSelector:
    matchLabels:
      app: worker
  policyTypes:
  - Egress
  - Ingress
  egress:
  - to:
      - podSelector:
          matchLabels:
            app: redis
    ports:
      - protocol: TCP
        port: 6379
  - to:
      - podSelector:
          matchLabels:
            app: db
    ports:
      - protocol: TCP
        port: 3306
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: redis
    ports:
      - protocol: TCP
        port: 8080
